--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <input class="form-control" type="text" id="password" /><br />
             <span id="passworderror" class="text-danger"></span>
             <button
-              class="btn btn-warning mt-3 w-100"
+              class="btn btn-success mt-3 w-100"
               onclick="VerifyPassword()"
             >
               Login
