--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
           <button class="btn btn-warning">
             <span class="bi bi-person-lock"></span>
           </button>
-          <input type="text" class="form-control" id="number" />
+          <input
+            type="text"
+            class="form-control"
+            id="number"
+            placeholder="enter email or number"
+          />
         </dd>
         <dd id="numbererror" class="text-danger"></dd>
         <dt>
@@ -90,7 +95,12 @@
           <button class="btn btn-success">
             <span class="bi bi-lock"></span>
           </button>
-          <input type="text" class="form-control" id="password" />
+          <input
+            type="text"
+            class="form-control"
+            id="password"
+            placeholder="enter password"
+          />
         </dd>
         <dd id="passworderror" class="text-danger"></dd>
         <dt>
